--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
                 if (typeof fields[e.target.id] !== 'undefined'){
                     return false
                 }
-
                 if (last === CROSS){
                     last = CIRCLE
                     fields[e.target.id] = CROSS
+                    element.innerHTML = "<img src='assets/circle.svg' alt='' width='100px' />"
                 } else{
                     last = CROSS
                     fields[e.target.id] = CIRCLE
+                    element.innerHTML = "<img src='assets/cross.svg' alt='' width='100px' />"
                 }
             })
         });
