--- a/index.html
+++ b/index.html
@@ -31,20 +31,33 @@
         const CIRCLE = 'CIRCLE';
         const CROSS = 'CROSS';
         let last = '';
-        let fields = [];
+        let fields = [[], [], []];
+
+        function addValueToMatrix(value){
+            if (value <= 2){
+                return 0
+            }
+
+            if (value >= 3 && value <= 5){
+                return 1
+            }
+
+            return 2
+        }
         const elems = document.querySelectorAll('td.field');
         elems.forEach(element => {
             element.addEventListener("click", (e)=> {
-                if (typeof fields[e.target.id] !== 'undefined'){
+                console.log(fields)
+                if (typeof fields[addValueToMatrix(e.target.id)][e.target.id] !== 'undefined'){
                     return false
                 }
-                if (last === CROSS){
+                if (last === CROSS && last !== ''){
                     last = CIRCLE
-                    fields[e.target.id] = CROSS
-                    element.innerHTML = "<img src='assets/circle.svg' alt='' width='90px' />"
-                } else{
+                    fields[addValueToMatrix(e.target.id)][e.target.id] = CROSS
+                    return element.innerHTML = "<img src='assets/circle.svg' alt='' width='90px' />"
+                } else {
                     last = CROSS
-                    fields[e.target.id] = CIRCLE
+                    fields[addValueToMatrix(e.target.id)][e.target.id] = CIRCLE
                     element.innerHTML = "<img src='assets/cross.svg' alt='' width='90px' />"
                 }
             })
