--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <article class="board">
         <table>
             <tbody>
-            <tr>
+            <tr id="row_0">
                 <td class="field" id="0"></td>
                 <td class="field" id="1"></td>
                 <td class="field" id="2"></td>
             </tr>
-            <tr>
+            <tr id="row_1">
                 <td class="field" id="3"></td>
                 <td class="field" id="4"></td>
                 <td class="field" id="5"></td>
             </tr>
-            <tr>
+            <tr id="row_2">
                 <td class="field" id="6"></td>
                 <td class="field" id="7"></td>
                 <td class="field" id="8"></td>
@@ -50,20 +50,19 @@
             return fields[res][slot] = sign
         }
 
-        function checkHorizontalFields(){
-            const [first, second, third] = fields;
-            const firstWon = first.every((item, index, arr) => item === arr[0])
-            const secondWon = second.every((item, index, arr) => item === arr[0])
-            const thirdWon = third.every((item, index, arr) => item === arr[0])
-            return firstWon || secondWon || thirdWon;
+        function checkHorizontalFields(id){
+            const row = id[id.length-1]
+            return fields[row].every((item, index, arr) => item === arr[0])
         }
 
         function checkVerticalFields(){
             const [first, second, third] = fields;
-            for (let count = 0; count < 3; count += 1){
-                console.log(count)
-                return first[count] === second[count] && first[count] === third[count]
+            for (let count = 0; count < 3; ++count){
+                if(first[count] === second[count] && first[count] === third[count]){
+                    return true;
+                }
             }
+            return false;
         }
 
         function checkSideFields(){
@@ -78,8 +77,9 @@
                 if (last === CIRCLE || last === ''){
                     element.innerHTML = "<img src='assets/cross.svg' alt='' width='90px' />"
                     last = CROSS
+                    console.log()
                     addValueToMatrix(e.target.id, CROSS);
-                    if(checkHorizontalFields() || checkVerticalFields() || checkSideFields()){
+                    if(checkHorizontalFields(e.target.parentNode.id) || checkVerticalFields() || checkSideFields()){
                         alert(`${last} WINS!!`)
                     }
 
@@ -87,7 +87,7 @@
                     element.innerHTML = "<img src='assets/circle.svg' alt='' width='90px' />"
                         last = CIRCLE
                         addValueToMatrix(e.target.id, CIRCLE);
-                        if(checkHorizontalFields() || checkVerticalFields() || checkSideFields()){
+                        if(checkHorizontalFields(e.target.parentNode.id) || checkVerticalFields() || checkSideFields()){
                             alert(`${last} WINS!!`)
                         }
                 }
