--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                 item.innerHTML = " ";
             });
             fields = [["1", "2", "3"], ["4", "5", "6"], ["7", "8", "9"]];
-            last = ''
+            last = '';
+            nextNode.innerText = "Next turn is: CROSS";
         };
 
         elems.forEach(element => {
