--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
             slot = value - 6
         }
         return fields[res][slot] = sign
-    };
+    }
 
     function checkHorizontalFields(id){
         const row = id[id.length-1]
         return fields[row].every((item, index, arr) => item === arr[0])
-    };
+    }
 
     function checkVerticalFields(){
         const [first, second, third] = fields;
@@ -65,12 +65,12 @@
             }
         }
         return false;
-    };
+    }
 
     function checkSideFields(){
         const [first, second, third] = fields;
         return first[0] === second[1] && first[0] === third[2] || first[2] === second[1] && first[2] === third[0]
-    };
+    }
 
     function win(){
         const game_field = document.getElementById("game_field");
@@ -84,7 +84,7 @@
         nextNode.innerText = "Next turn is: CROSS";
         nextNode.classList.remove("cross");
         nextNode.classList.remove("circle");
-    };
+    }
 
     function isDraw(){
         const filled = fields.flatMap((item) => item.every((item) => typeof item === "string")).filter(value => value).length
@@ -99,19 +99,25 @@
             }
         })
 
-        const field = Math.floor(Math.random() * Math.floor(arrElems.length));
-        arrElems[field].classList.add("circle")
-        last = CIRCLE
-        nextNode.innerText ="Next turn is: CROSS";
-        nextNode.classList.add("cross");
-        nextNode.classList.remove("circle");
-        addValueToMatrix(field, CIRCLE);
-        if(checkHorizontalFields(arrElems[field].parentNode.id) || checkVerticalFields() || checkSideFields()){
-            alert(`${last} WINS!!`)
-            win();
+        if (arrElems.length !== 0){
+            const field = Math.floor(Math.random() * Math.floor(arrElems.length));
+            console.log(arrElems[field])
+            addValueToMatrix(arrElems[field].id, CIRCLE);
+            arrElems[field].classList.add("circle")
+            last = CIRCLE
+            nextNode.innerText ="Next turn is: CROSS";
+            nextNode.classList.add("cross");
+            nextNode.classList.remove("circle");
+            console.log(fields)
+            if(checkHorizontalFields(arrElems[String(field)].parentNode.id) || checkVerticalFields() || checkSideFields()){
+                alert(`${last} WINS!!`)
+                win();
+            } else{
+                console.log('Whats wrong')
+            }
         }
         if (isDraw()){
-            alert("Draw")
+            alert("Draw");
             win();
         }
     }
@@ -124,6 +130,7 @@
                 nextNode.innerText = "Next turn is: CIRCLE";
                 nextNode.classList.add("circle");
                 nextNode.classList.remove("cross");
+                console.log(e.target.id)
                 addValueToMatrix(e.target.id, CROSS);
                 if(checkHorizontalFields(e.target.parentNode.id) || checkVerticalFields() || checkSideFields()){
                     alert(`${last} WINS!!`)
@@ -137,42 +144,6 @@
             setTimeout(function (){
                 aImOve();
             }, 500)
-        })
-
-        element.addEventListener("keydown", (e)=> {
-            if (e.code === 'Enter') {
-                if (last === CIRCLE || last === '') {
-                    element.classList.add("cross")
-                    last = CROSS
-                    nextNode.innerText = "Next turn is: CIRCLE";
-                    nextNode.classList.add("circle");
-                    nextNode.classList.remove("cross");
-                    addValueToMatrix(e.target.id, CROSS);
-                    if (checkHorizontalFields(e.target.parentNode.id) || checkVerticalFields() || checkSideFields()) {
-                        alert(`${last} WINS!!`)
-                        win();
-                    }
-                    if (isDraw()) {
-                        alert("Draw")
-                        win();
-                    }
-                } else {
-                    element.classList.add("circle")
-                    last = CIRCLE
-                    nextNode.innerText = "Next turn is: CROSS";
-                    nextNode.classList.add("cross");
-                    nextNode.classList.remove("circle");
-                    addValueToMatrix(e.target.id, CIRCLE);
-                    if (checkHorizontalFields(e.target.parentNode.id) || checkVerticalFields() || checkSideFields()) {
-                        alert(`${last} WINS!!`)
-                        win();
-                    }
-                    if (isDraw()) {
-                        alert("Draw")
-                        win();
-                    }
-                }
-            }
         })
     });
 </script>
